# ame

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: build.yml
ame_ast/: Cargo.toml
ame_ast/src/: ast.rs  infer.rs  lib.rs
ame_cli/: Cargo.toml
ame_cli/src/: cli.rs  main.rs
ame_codegen/: Cargo.toml
ame_codegen/src/: backend.rs  lib.rs
ame_codegen_llvm/: Cargo.toml
ame_codegen_llvm/src/: backend.rs  lib.rs  options.rs  traits.rs  ty.rs
ame_common/: Cargo.toml
ame_common/src/: arena.rs  interner.rs  lib.rs  scopestack.rs
ame_lexer/: Cargo.toml
ame_lexer/src/: lexer.rs  token.rs
ame_parser/: Cargo.toml
ame_parser/src/: ast.rs  parser.rs
ame_tast/: Cargo.toml
ame_tast/src/: inferrer.rs  lib.rs
ame_types/: Cargo.toml
ame_types/src/: lib.rs  tcx.rs
examples/: collatz.ame  factorial.ame  fib.ame
fuzz/: Cargo.toml
fuzz/fuzz_targets/: lexer.rs
