[workspace]
resolver = "3"
members = [
    "ame_cli",

    "ame_common",

    "ame_lexer",
    "ame_parser",
    "ame_ast",

    "ame_types",
    "ame_tast",

    "ame_codegen_llvm",

    "fuzz"
]

[workspace.package]
authors = ["Deathlesz"]
edition = "2024"
license = "MIT OR Apache-2.0"
keywords = ["compiler", "language", "ame"]
readme = "README.md"
