[package]
name = "ame_cli"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
readme.workspace = true

[dependencies]
miette = { version = "7", features = ["fancy"] }
clap = { version = "4.5", features = ["derive"] }

ame_lexer = { path = "../ame_lexer" }
ame_parser = { path = "../ame_parser" }
ame_codegen_llvm = { path = "../ame_codegen_llvm" }
