[package]
name = "ame_codegen"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
readme.workspace = true

[dependencies]
ame_common = { path = "../ame_common" }
ame_tast = { path = "../ame_tast" }
ame_types = { path = "../ame_types" }
