[package]
name = "ame_codegen_llvm"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
readme.workspace = true

[dependencies]
thiserror = "2"
inkwell = { version = "0.6", features = ["llvm18-1"] }

ame_lexer = { path = "../ame_lexer" }
ame_parser = { path = "../ame_parser" }

[features]
dynamic-linking = ["inkwell/llvm18-1-prefer-dynamic"]

