[package]
name = "ame_tast"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
readme.workspace = true

[dependencies]
ame_common = { path = "../ame_common" }
ame_lexer = { path = "../ame_lexer" }
ame_ast = { path = "../ame_ast" }
ame_types = { path = "../ame_types" }
